tests/baselines/reference/objectTypesIdentityWithPrivates2(strict=true).errors.txt
objectTypesIdentityWithPrivates2.ts(4,13): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithPrivates2.ts(10,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithPrivates2.ts(11,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithPrivates2.ts(14,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithPrivates2.ts(15,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithPrivates2.ts(18,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithPrivates2.ts(19,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithPrivates2.ts (7 errors) ====
    // object types are identical structurally
    
    class C<T> {
        private foo: T;
                ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class D<T> extends C<T> {
    }
    
    function foo1(x: C<string>);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: C<number>); // ok
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo2(x: D<string>);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: D<number>); // ok
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: C<string>);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: D<number>); // ok
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: C<number>): number; 
    function foo4(x: D<number>): string; // BUG 831926
    function foo4(x: any): any { }
    
    var r = foo4(new C<number>());
    var r = foo4(new D<number>());
    
    function foo5(x: C<number>): number;
    function foo5(x: C<number>): string; // error
    function foo5(x: any): any { }
    
    function foo6(x: D<number>): number;
    function foo6(x: D<number>): string; // error
    function foo6(x: any): any { }
    
    
    